Add global docs link to upper right

--- a/distributed/http/static/css/base.css
+++ b/distributed/http/static/css/base.css
@@ -52,6 +52,10 @@ body {
   background-color: #eaaa6d;
 }
 
+.navbar .pull-right {
+  float: right;
+}
+
 #dask-logo img {
   height: 28px;
   padding: 5px 15px;
