--- a/distributed/http/templates/base.html
+++ b/distributed/http/templates/base.html
@@ -49,6 +49,9 @@
                     <img src="statics/images/fa-bars.svg"></img>
                 </a>
             </li>
+            <li class="pull-right">
+                <a href="https://docs.dask.org/en/stable/" target="_blank">Documentation</a>
+            </li>
         </ul>
     </div>
     <div class="content">
