--- a/distributed/http/templates/base.html
+++ b/distributed/http/templates/base.html
@@ -52,6 +52,14 @@
             <li class="pull-right">
                 <a href="https://docs.dask.org/en/stable/" target="_blank">Documentation</a>
             </li>
+            {% if jupyter %}
+            <li class="pull-right">
+                <a class="jupyter-link" href="jupyter/lab" target="_blank">
+                    <img src="statics/images/jupyter.svg" />
+                    Launch Jupyter
+                </a>
+            </li>
+            {% endif %}
         </ul>
     </div>
     <div class="content">
