--- a/distributed/widgets/templates/computation.html.j2
+++ b/distributed/widgets/templates/computation.html.j2
@@ -26,8 +26,8 @@
 
 <details>
 <summary style="margin-bottom": 20px><h4 style="display:inline">Code</h4></summary>
-{% for frames in code_frames %}
-<h5>Code segment {{ loop.index }} / {{ code_frames | length }}</h5>
+{% for frames in code %}
+<h5>Code segment {{ loop.index }} / {{ code | length }}</h5>
 <pre><code>{{ frames[-1] }}</code></pre>
 {% endfor %}
 </details>
