--- a/distributed/widgets/templates/computation.html.j2
+++ b/distributed/widgets/templates/computation.html.j2
@@ -26,9 +26,9 @@
 
 <details>
 <summary style="margin-bottom": 20px><h4 style="display:inline">Code</h4></summary>
-{% for frames in code if frames %}
+{% for segment in code %}
 <h5>Code segment {{ loop.index }} / {{ code | length }}</h5>
-<pre><code>{{ frames[-1] }}</code></pre>
+<pre><code>{{ segment }}</code></pre>
 {% endfor %}
 </details>
 
